--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -93,6 +93,10 @@ input:focus {
   margin-bottom: 10px;
 }
 
+#light.loader-header {
+  color: black;
+}
+
 .loader {
   width: 50px;
   height: 50px;
@@ -106,6 +110,20 @@ input:focus {
 
 @keyframes s3 {
   100% {
+    transform: rotate(1turn);
+  }
+}
+
+#light.loader {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: conic-gradient(#0000 10%, #7b72ff);
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: s3 1s infinite linear;
+}
+@keyframes s3 {
+  to {
     transform: rotate(1turn);
   }
 }
