--- a/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
+++ b/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
@@ -172,7 +172,8 @@
 .cms-edit:hover,
 .cms-delete:hover {
   cursor: pointer;
-  text-decoration: underline;
+  color: white;
+  /* text-decoration: underline; */
 }
 
 .row {
@@ -328,6 +329,6 @@
   position: relative;
 }
 
-/* .loading-cms {
-	width: calc(100% - 240px);
-} */
+.loading-cms {
+  width: calc(100% - 240px);
+}
