Complete 404 page except need new image

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -27,6 +27,10 @@
   padding: 0px 24px;
 }
 
+#NotFound.Navigation-container {
+  background-color: #ffffff;
+}
+
 .Navigation-list {
   list-style-type: none;
   height: 100%;
@@ -37,11 +41,16 @@
   align-items: center;
 }
 
+
 .Navigation-links-main {
   display: none;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+#NotFound.Navigation-links-main > li {
+  color: #060607;
 }
 
 .Navigation-logo-container {
@@ -71,6 +80,10 @@
   border: none;
 }
 
+  #NotFound.Navigation-hamburger {
+    color: #060607;
+  }
+
 .Navigation-login {
   height: 38px;
   background-color: #ffffff;
@@ -79,6 +92,11 @@
   padding: 7px 16px;
   font-size: 14px;
   margin-right: 16px;
+}
+
+#NotFound.Navigation-login {
+  background-color: #404eed;
+  color: #ffffff;
 }
 
 .Navigation-login:hover {
