--- a/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
+++ b/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
@@ -1,8 +1,8 @@
-.dms-admin{
+.dms-admin {
 	color: rgb(103, 223, 147);
 }
 
-.dms-member{
+.dms-member {
 	color: rgb(196, 122, 228);
 }
 
@@ -13,4 +13,15 @@
 .cm-form-container.dms {
 	box-sizing: border-box;
 	width: 100%;
+}
+
+.mleft-10 {
+	margin-left: 10px;
+}
+
+.dm-aka {
+	background-color: rgba(0, 0, 0, 0.13);
+	border-radius: 10px;
+	padding: 4px 7px;
+	font-size: 12px;
 }
