add seeders servmbr + friend + chan + fix styles + server cards with member#

--- a/react-app/src/components/UserLanding/UserLanding.css
+++ b/react-app/src/components/UserLanding/UserLanding.css
@@ -25,6 +25,8 @@
   /* padding-right: 20px; */
   /* width: 1186px; */
   width: 100%;
+    overflow-y: scroll;
+
 }
 
 .UserLanding-server-members {
@@ -53,6 +55,7 @@
 .UserLanding-people-list-container {
   display: flex;
   flex-direction: column;
+  /* overflow-y: scroll; */
 }
 
 .UserLanding-people-list {
