--- a/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
+++ b/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
@@ -28,8 +28,8 @@
 
 .overfl-wid {
 	width: auto;
-	max-width: 65%;
 	padding-left: 25px;
 	border-left: solid 1px rgba(0, 0, 0, 0.13);
 	overflow-x: hidden;
+	height: 25px;
 }
