--- a/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
+++ b/react-app/src/components/DirectMessages/DMIndex/DMIndex.css
@@ -20,10 +20,10 @@
 }
 
 .dm-aka {
-	background-color: rgba(0, 0, 0, 0.13);
+	background-color: rgba(0, 0, 0, 0.096);
 	border-radius: 10px;
-	padding: 4px 7px;
-	font-size: 12px;
+	padding: 3px 7px 0px 7px;
+	font-size: 10px;
 }
 
 .overfl-wid {
@@ -31,5 +31,10 @@
 	padding-left: 25px;
 	border-left: solid 1px rgba(0, 0, 0, 0.13);
 	overflow-x: hidden;
-	height: 25px;
+	height: 20px;
+}
+
+.dm-names {
+	color: rgba(255, 255, 255, 0.507);
+	font-size: 14px;
 }
