--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -43,9 +43,9 @@
 }
 
 /* Track */
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track { */
   /* background-color: #202225; */
-}
+/* } */
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
