Added purple theme option to theme dropdown menu

--- a/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
+++ b/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
@@ -42,7 +42,7 @@
 	background-color: #eeeef1;
 }
 
-#dark.cm-text-input {
+#purple.cm-text-input {
 	color: #c2528b;
 	background-color: #965252;
 }
